--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/Consult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/Consult.cshtml
@@ -39,7 +39,7 @@
                                     <div class="c-form c-form--time">
                                         <div class="c-form__title">選擇日期</div>
                                         <div class="c-form__content">
-                                            <div class="l-form is-error" id="l-form-date">
+                                            <div class="l-form" id="l-form-date">
                                                 <div class="l-form__item">
                                                     <div class="o-calendarBox o-calendarBox--noMax">
                                                         <input type="text" class="o-calendarBox__input" custom-data-calendar="true" readonly>
@@ -56,7 +56,7 @@
                                     <div class="c-form c-form--time">
                                         <div class="c-form__title">選擇時段</div>
                                         <div class="c-form__content">
-                                            <div class="l-form is-error" id="l-form-time">
+                                            <div class="l-form" id="l-form-time">
                                                 <div class="l-form__item">
                                                     <div class="l-pickGroup l-pickGroup--time">
                                                         <div class="l-pickGroup__item">
@@ -188,7 +188,7 @@
                                 <div class="c-form">
                                     <div class="c-form__title">聯絡電話</div>
                                     <div class="c-form__content">
-                                        <div class="l-form is-error" id="l-form-phone">
+                                        <div class="l-form" id="l-form-phone">
                                             <div class="l-form__input">
                                                 <input id="input-tel" type="tel" class="o-textbox o-textbox--full o-textbox--form" placeholder="輸入聯絡電話">
                                             </div>
@@ -203,7 +203,7 @@
                                 <div class="c-form">
                                     <div class="c-form__title">電子信箱</div>
                                     <div class="c-form__content">
-                                        <div class="l-form is-error" id="l-form-mail">
+                                        <div class="l-form" id="l-form-mail">
                                             <div class="l-form__input">
                                                 <input id="input-email" type="email" class="o-textbox o-textbox--full o-textbox--form" placeholder="輸入電子信箱">
                                             </div>
@@ -221,7 +221,7 @@
                                 <div class="c-form">
                                     <div class="c-form__title">諮詢主題(可複選)</div>
                                     <div class="c-form__content">
-                                        <div class="l-form is-error" id="l-form-subject">
+                                        <div class="l-form" id="l-form-subject">
                                             <div class="l-form__item">
                                                 <div class="l-pickGroup l-pickGroup--form">
                                                     <div class="l-pickGroup__item">
@@ -402,11 +402,11 @@
                 </div>
                 <div class="l-info__item">
                     <div class="l-info__title">諮詢主題</div>
-                    <div class="l-info__val" id="l-info-subject">投資組合建議、資產配置規劃、退休理財規劃</div>
+                    <div class="l-info__val" id="l-info-subject"></div>
                 </div>
                 <div class="l-info__item">
                     <div class="l-info__title">其他諮詢內容</div>
-                    <div class="l-info__val" id="l-info-description">預計在50歲退休，想了解退休缺口多大，如何進行資產配置，有機會可以提早退休</div>
+                    <div class="l-info__val" id="l-info-description"></div>
                 </div>
             </div>
         </div>
@@ -476,7 +476,7 @@
     const consultSchedules = @Model.ConsultSchedulesHtmlString;
     const reserveds = @Model.ReservedsHtmlString;
     const dayNamesZh = ['日', '一', '二', '三', '四', '五', '六'];
-    const emailReg = /^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$/;
+    const emailReg = /^[a-zA-Z0-9_.+-]+@@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$/;
     const phoneReg = /^09[0-9]{8}$/;
 
     var currentConsultSchedule = {
@@ -657,8 +657,6 @@
                 $('[data-time]').attr('disabled', true);
                 //取消選擇全部時段
                 $('[data-time]').prop('checked', false);
-                //顯示沒選擇時段錯誤訊息
-                $('#l-form-time').addClass('is-error');
 
                 checkConsult();
 
@@ -681,9 +679,49 @@
         $('[data-next]').on('click', function (e) {
             e.preventDefault();
 
+            if (currentConsultSchedule.ScheduleDateString){
+
+            }
+            else{
+                //顯示沒選擇日期錯誤訊息
+                $('#l-form-date').addClass('is-error');
+            }
+
             if ($('[data-time]:checked').val()) {
                 $('#step01').hide();
                 $('#step02').show();
+            }
+            else {
+                //顯示沒選擇時段錯誤訊息
+                $('#l-form-time').addClass('is-error');
+            }
+        });
+
+        $('#btn-check').on('click', function (e) {
+            e.preventDefault();
+
+            if (currentConsultSchedule.Phone && validatePhone(currentConsultSchedule.Phone)) {
+            }
+            else {
+                $('#l-form-phone').addClass('is-error');
+            }
+
+            if (currentConsultSchedule.Mail && validateEmail(currentConsultSchedule.Mail)) {
+            }
+            else {
+                $('#l-form-mail').addClass('is-error');
+            }
+
+            if (currentConsultSchedule.Subject) {
+            }
+            else {
+                $('#l-form-subject').addClass('is-error');
+            }
+
+            if ($('#picheck').prop("checked")) {
+            }
+            else {
+
             }
         });
 
