android 手機瀏覽造成 header 第一理財網換行 跑版

--- a/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
@@ -96,8 +96,10 @@
                 </a>
             </div>
             <div class="l-header__logo">
-                <a href="https://www.firstbank.com.tw/" target="_blank"><img src="~/themes/images/layout/logo.svg" alt="第一銀行logo" class="o-ci__logo"></a>
-                <a href="/" class="o-ci__site">第e理財網</a>
+                <div class="o-ci">
+                    <a href="https://www.firstbank.com.tw/" target="_blank"><img src="~/themes/images/layout/logo.svg" alt="第一銀行logo" class="o-ci__logo"></a>
+                    <a href="/" class="o-ci__site">第e理財網</a>
+                </div>
             </div>
             <!-- #START Placeholder: navbar -->
             @Html.Sitecore().Placeholder("navbar")
