ETF 搜尋篩選下方筆數文字調整

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/_EtfSearchFilter.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/_EtfSearchFilter.cshtml
@@ -960,7 +960,7 @@
                 <div class="l-filter__tool">
                     <div class="l-filter__total">
                         <div class="o-total">
-                            共<span data-uid-total>0</span>檔ETF
+                            搜尋ETF<span data-uid-total>0</span>筆
                         </div>
                     </div>
                     <div class="l-filter__reset">
