Update:「搜尋XXX筆」改為「搜尋基金XXX筆」

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
@@ -849,7 +849,7 @@
 							<!-- 大小網展開收合功能觸發點[data-filter-collapse] -->
 							<div class="c-filter__total" data-filter-collapse>
 								<div class="o-total o-total--wt">
-									搜尋<span id="uid-total">0</span>筆
+									搜尋基金<span id="uid-total">0</span>筆
 								</div>
 							</div>
 						</div>
@@ -885,7 +885,7 @@
 				<div class="l-filter__tool">
 					<div class="l-filter__total">
 						<div class="o-total">
-							搜尋<span id="uid-total">0</span>筆
+							搜尋基金<span id="uid-total">0</span>筆
 						</div>
 					</div>
 					<div class="l-filter__reset">
