--- a/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
@@ -153,7 +153,7 @@
             "/themes/vendor/wnumb/wNumb.min.js",
             "/themes/js/formula.min.js",
             "/themes/js/jspdf.umd.min.js",
-            "/themes/js/html2canvas.min.js",
+            "/themes/js/dom-to-image.min.js",
             "/themes/js/filter.min.js",
             "/themes/js/plugins.min.js",
             "/themes/js/main.min.js")
