個人資料運用告知聲明連結

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsult.cshtml
@@ -192,7 +192,7 @@
                                 <label class="o-checkbox">
                                     <input class="o-checkbox__input" type="checkbox" id="picheck">
                                     <div class="o-checkbox__text">
-                                        為保護您的權益，請詳細閱讀<a href="#" class="o-link">個人資料運用告知聲明</a>，當表單送出時，即視同您已充分了解與同意。
+                                        為保護您的權益，請詳細閱讀<a href="@Model.PersonalInformationLink" class="o-link">個人資料運用告知聲明</a>，當表單送出時，即視同您已充分了解與同意。
                                     </div>
                                 </label>
                             </div>
@@ -383,11 +383,11 @@
                 </div>
                 <div class="l-info__item">
                     <div class="l-info__title">諮詢主題</div>
-                    <div class="l-info__val" id="l-info-subject">投資組合建議、資產配置規劃、退休理財規劃</div>
+                    <div class="l-info__val" id="l-info-subject"></div>
                 </div>
                 <div class="l-info__item">
                     <div class="l-info__title">其他諮詢內容</div>
-                    <div class="l-info__val" id="l-info-description">預計在50歲退休，想了解退休缺口多大，如何進行資產配置，有機會可以提早退休</div>
+                    <div class="l-info__val" id="l-info-description"></div>
                 </div>
             </div>
         </div>
