--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductSearch.cshtml
@@ -223,7 +223,7 @@
                 <div class="l-filter__tool">
                     <div class="l-filter__total">
                         <div class="o-total">
-                            共<span id="uid-total">0</span>項結構型商品
+                            搜尋結構型商品<span id="uid-total">0</span>筆
                         </div>
                     </div>
                     <div class="l-filter__reset">
