Fix:市價日期調整

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/IndexRecommendation/IndexRecommendation.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/IndexRecommendation/IndexRecommendation.cshtml
@@ -428,7 +428,7 @@
                                 }
                             </tbody>
                         </table>
-                        <div class="l-dataNotes"><span class="t-date">資料日期：@Model.ETFNetAssetValueDate.ToString("yyyy/MM/dd")</span></div>
+						<div class="l-dataNotes"><span class="t-date">資料日期：@Model.ETFMarketPriceDate.ToString("yyyy/MM/dd")</span></div>
                     </div>
                     <div class="l-action">
                         <div class="l-action__item">
