--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewArrivalETF/NewArrivalEtfReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewArrivalETF/NewArrivalEtfReturnView.cshtml
@@ -56,7 +56,7 @@
 
 							<br>
 
-							<span class="t-date">@item.NetAssetValueDateFormat</span>
+							<span class="t-date">@item.MarketPriceDateFormat</span>
 						}
 						else
 						{
