--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/CostRank/CostRankReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/CostRank/CostRankReturnView.cshtml
@@ -42,7 +42,7 @@
 			</td>
 			<td class="c-cardTable__body" data-card-table-width="1/2">
 				<div class="c-cardTable__title" data-length="5">市價<br>(日期)</div>
-				<div class="c-cardTable__content">@item.MarketPrice<br><span class="t-date">@item.NetAssetValueDateFormat</span></div>
+				<div class="c-cardTable__content">@item.MarketPrice<br><span class="t-date">@item.MarketPriceDateFormat</span></div>
 			</td>
 			<td class="c-cardTable__body" data-card-table-width="1/2">
 				<div class="c-cardTable__title" data-length="5">
