--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/DiscountPremium/DiscountPremium.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/DiscountPremium/DiscountPremium.cshtml
@@ -310,7 +310,7 @@
 			<td class="c-cardTable__body" data-card-table-width="1/2">
 				<div class="c-cardTable__title" data-length="4">市價<br>(日期)</div>
 				<% if (MarketPrice != null) { %>
-				<div class="c-cardTable__content"><%= MarketPrice.toFixed(4) %><br><span class="t-date"><%= NetAssetValueDate %></span></div>
+				<div class="c-cardTable__content"><%= MarketPrice.toFixed(4) %><br><span class="t-date"><%= MarketPriceDate %></span></div>
 				<% } else {%>
 				<span>-</span>
 				<% } %>
